--- a/6.To-Do-list/index.html
+++ b/6.To-Do-list/index.html
@@ -15,9 +15,9 @@
             </form>
         </div>
         <div class="tasks">
-
         </div>
 
+        <footer>Made by <a id="link" target="_blank" href="https://www.linkedin.com/in/mohamed-khalil-assaddiki-15511b25b/">Mohamed Khalil Assaddiki</a></footer>
     </section>    
     <script src="main.js"></script>
 </body>
