--- a/1.Color Flipper/index.html
+++ b/1.Color Flipper/index.html
@@ -18,6 +18,7 @@
                         <a href="hex.html">Hex</a>
                     </li>
                 </ul>
+                <img class='hamburger' src="hamburger.png" alt="hamburgerIcon" >
             </div>
         </nav>
 
