--- a/1.Color Flipper/hex.html
+++ b/1.Color Flipper/hex.html
@@ -18,6 +18,8 @@
                         <a href="hex.html">Hex</a>
                     </li>
                 </ul>
+                <img class='hamburger' src="hamburger.png" alt="hamburgerIcon" >
+
             </div>
         </nav>
 
